--- a/package.json
+++ b/package.json
@@ -1,24 +1,39 @@
 {
-  "name": "vue-lib",
+  "name": "mnyt-vue-lib",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "main": "lib/vue-lib.umd.min",
   "scripts": {
     "dev": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "build:theme": "node build/gen-cssfile && gulp build --gulpfile packages/theme-chalk/gulpfile.js && cp-cli packages/theme-chalk/lib lib/theme-chalk",
+    "lib": "vue-cli-service build --target lib --name mnyt-vue-lib --BUILD_MODE lib --dest lib packages/index.js",
+    "dist": "npm run lib && npm run build:theme"
   },
   "dependencies": {
-    "core-js": "^3.8.3",
-    "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "core-js": "^3.8.3"
+  },
+  "peerDependencies": {
+    "vue": "^3.2.13"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kricn/vue-lib"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-typescript": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "cp-cli": "^2.0.0",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^6.0.0",
+    "gulp-cssmin": "^0.2.0",
+    "gulp-sass": "^5.1.0",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
-    "typescript": "~4.5.5"
+    "typescript": "~4.5.5",
+    "vue-router": "^4.0.3"
   },
   "browserslist": [
     "> 1%",
