--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,9 @@
     "paths": {
       "@/*": [
         "examples/*"
+      ],
+      "@packages": [
+        "packages/*"
       ]
     },
     "lib": [
@@ -32,7 +35,10 @@
     "examples/**/*.tsx",
     "examples/**/*.vue",
     "tests/**/*.ts",
-    "tests/**/*.tsx"
+    "tests/**/*.tsx",
+    "packages/**/*.ts",
+    "packages/**/*.tsx",
+    "packages/**/*.vue",
   ],
   "exclude": [
     "node_modules"
