--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
     "typescript": "~4.5.5",
-    "vue-router": "^4.0.3",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-router": "^4.0.3"
   },
   "browserslist": [
     "> 1%",
