--- a/package.json
+++ b/package.json
@@ -25,15 +25,26 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-typescript": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "@vue/compiler-sfc": "^3.2.40",
+    "@vue/component-compiler-utils": "^3.3.0",
     "cp-cli": "^2.0.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^6.0.0",
     "gulp-cssmin": "^0.2.0",
     "gulp-sass": "^5.1.0",
+    "highlight.js": "^11.6.0",
+    "loader": "^2.1.1",
+    "markdown-it": "^13.0.1",
+    "markdown-it-anchor": "^8.6.5",
+    "markdown-it-chain": "^1.3.0",
+    "markdown-it-container": "^3.0.0",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
+    "transliteration": "^2.3.5",
     "typescript": "~4.5.5",
     "vue": "^3.2.13",
+    "vue-loader": "^17.0.0",
+    "vue-markdown": "^2.2.4",
     "vue-router": "^4.0.3"
   },
   "browserslist": [
