--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "build:comp": "node build/build.js",
     "build:theme": "node build/gen-cssfile && gulp build --gulpfile packages/theme-chalk/gulpfile.js && cp-cli packages/theme-chalk/lib lib/theme-chalk",
-    "lib": "node build/build.js && vue-cli-service build --target lib --name mnyt-vue-lib --BUILD_MODE lib --dest lib packages/index.js",
+    "lib": "vue-cli-service build --target lib --name mnyt-vue-lib --BUILD_MODE lib --dest lib packages/index.js",
     "dist": "npm run lib && npm run build:theme"
   },
   "dependencies": {
@@ -37,6 +38,7 @@
     "markdown-it-anchor": "^8.6.5",
     "markdown-it-chain": "^1.3.0",
     "markdown-it-container": "^3.0.0",
+    "postcss": "^8.4.17",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
     "transliteration": "^2.3.5",
